7-kubernetes-5-ingress/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: multitool
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: backend-html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: backend-html
          configMap:
            name: backend-html
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
